# wxwidgets_toy

./: .clang-format  README.md
base_change_ui/: CMakeLists.txt  wx_widgets
base_change_ui/include/: base_change.h  frame.h
base_change_ui/src/: app.cpp  base_change.cpp  exchange.xpm  main.cpp
chartControls/: CMakeLists.txt
chartControls/include/: MyFrame.h  chartControl.h  graphicobject.h
chartControls/src/: MyFrame.cpp  chartControl.cpp  main.cpp
colorPalette/: CMakeLists.txt
colorPalette/include/: MyFrame.h
colorPalette/src/: MyFrame.cpp  main.cpp
customControls/: CMakeLists.txt
customControls/demo/: a.out  prev_iter.cpp
customControls/include/: MyFrame.h  drawingcanvas.h
customControls/src/: MyFrame.cpp  drawingcanvas.cpp  main.cpp
delete_changeline/: CMakeLists.txt
delete_changeline/include/: cApp.h  cMain.h  delete_line.h
delete_changeline/src/: cMain.cpp
desktop_progm_1/: CMakeLists.txt
desktop_progm_1/include/: cMain.h
desktop_progm_1/src/: cMain.cpp
desktop_progm_2/: CMakeLists.txt
desktop_progm_2/include/: cApp.h  cMain.h
desktop_progm_2/src/: cApp.cpp  cMain.cpp
desktop_progm_3/: CMakeLists.txt
desktop_progm_3/include/: cMain.h
desktop_progm_3/src/: cMain.cpp  delete_line.cpp
desktop_progm_4/: CMakeLists.txt
desktop_progm_4/include/: cCanvas.h  cEditorFrame.h  cMain.h
desktop_progm_4/src/: cApp.cpp  cCanvas.cpp  cEditorFrame.cpp  cMain.cpp
layout_wxwidgets/: CMakeLists.txt
layout_wxwidgets/src/: main.cpp
list_control/: CMakeLists.txt
list_control/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
list_control/include/: myframe.h
list_control/src/: myapp.cpp  myframe.cpp
list_csv/: CMakeLists.txt  NOTES.md
list_csv/include/: itemdata.h  myapp.h  myframe.h  simplevirtuallistcontrol.h
list_csv/src/: main.cpp  myapp.cpp  myframe.cpp  simplevirtuallistcontrol.cpp
multi_windows/: CMakeLists.txt  wx_widgets
multi_windows/include/: IHandler.h  ILooper.h  ILooperRoster.h  IMessage.h  Ipanel.h  Thread.h  adbpiple.h  frame.h  refbase.h
multi_windows/resources/: android.xpm  app-development.xpm  binary-code.xpm
multi_windows/src/: IHandler.cpp  ILooper.cpp  ILooperRoster.cpp  Thread.cpp  app.cpp  frame.cpp  piple.cpp
office_tutorials/colour_dialog/: CMakeLists.txt
office_tutorials/dialogs/: CMakeLists.txt  app.cpp  frame.cpp
office_tutorials/dialogs/icons/: loupe.xpm
office_tutorials/dialogs/include/: frame.h
office_tutorials/dialogs/resources/: tips.txt
office_tutorials/event_handling/: build_ninja.sh  frame.cpp  frame.h  mondrian.xpm  ninja_compiler.sh
office_tutorials/file_dialogs/: CMakeLists.txt  app.cpp  frame.cpp  mytypes.cpp  wx_widgets
office_tutorials/file_dialogs/include/: frame.h  logs.h  mytypes.h
office_tutorials/file_dialogs/sources/: demp.cpp  new_file.txt  text_file.txt
office_tutorials/get_started/: CMakeLists.txt  app.cpp  frame.cpp  frame.h
office_tutorials/layout_and_sizer/: CMakeLists.txt  conf_build.sh  wx_widgets
office_tutorials/layout_and_sizer/src/: main.cpp
office_tutorials/notebook/: copy.xpm  frame.cpp  paste.xpm
office_tutorials/paint/: CMakeLists.txt  TileBitmap.cpp  TileBitmap.h  app.cpp  frame.cpp  frame.h
office_tutorials/sizer/: CMakeLists.txt  app.cpp  build_make.sh  frame.cpp  frame.h  mydialog.cpp  mydialog.h  myflexgridsizer.cpp  myflexgridsizer.h  mygridbagsizer.cpp  mygridbagsizer.h  mygridsizer.cpp  mygridsizer.h  mystaticboxsizer.cpp  mystaticboxsizer.h
office_tutorials/wxtext/: CMakeLists.txt
popen_pid/: CMakeLists.txt
popen_pid/include/: piple.h
popen_pid/src/: main.cpp  piple.cpp
shareData_btThread/: CMakeLists.txt
shareData_btThread/include/: MyApp.h  MyFrame.h  logs.h  visualGrid.h
shareData_btThread/src/: MyFrame.cpp  main.cpp  visualGrid.cpp
simplelogs/: logs.c
splitterwindows_wxwidgets/: CMakeLists.txt  build.sh
splitterwindows_wxwidgets/src/: main.cpp
usingThread/: CMakeLists.txt
usingThread/include/: MyFrame.h
usingThread/src/: MyFrame.cpp
wxYield/: CMakeLists.txt
wxYield/include/: MyFrame.h
wxYield/src/: MyFrame.cpp
wxYield_I/: CMakeLists.txt
wxYield_I/include/: MyFrame.h
wxYield_I/src/: MyFrame.cpp
wxYield_II/include/: ChunkedSort.h  MyFrame.h
wxYield_II/src/: MyFrame.cpp  main.cpp
